# mmio-mpi-reader

./: .gitignore  CMakeLists.txt
cmake/: boost.cmake  fmt.cmake
example/: CMakeLists.txt  main.c  main.cpp
header/: CMakeLists.txt
header/include/: mmio-mpi.hpp
header/src/: mmio-mpi.c  mmio-mpi.cpp
headermmio/: CMakeLists.txt
impl/: CMakeLists.txt  main.cpp
utilities/: CMakeLists.txt  parseCLA.hpp
